# secureblog

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  ACCOUNT-SECURITY.md  ADMIN-GUIDE.md  CI-ENFORCEMENT-TABLE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  Makefile.security  QUICKSTART.md  README.md  SECURITY-AUDIT.md  SECURITY-FINAL.md  SECURITY-HARDENING.md  blog  build-sandbox.sh  build.sh  cloudflare-config.json  cloudflare-pages-only.toml  config.yaml  deploy.sh  git_push_deploy.sh  go.mod  launch.sh  nginx-csp-fixed.conf  nginx-hardened.conf  nginx-ultra-hardened.conf  nginx.conf  plugin.md  release.json  secureblog-easy.sh  secureblog-nginx.service  security-headers.conf  start-admin.sh  wrangler.toml
.github/: CODEOWNERS  allowed-actions.yml  branch-protection.json  dependabot.yml  pull_request_template.md  settings.yml
.scripts/: nojs-guard.sh  nojs_guard.sh  security-regression-guard.sh
.well-known/: security.txt
cloudflare/: account-hardening.tf  csp-reporter-worker.js  csp-reporting-worker.js  deploy-rate-limits.sh  dns-hardening.tf  edge-security-config.js  edge-security-worker.js  get-head-only-worker.js  manifest-verification-worker.js  origin-hardlock.tf  pages-only-config.js  precision-csp-worker.js  r2-bucket-lock.tf  r2-deploy-worker.js  rate-limiting.json  waf-rules-comprehensive.tf  wrangler-worker.toml
cmd/: main.go  main_test.go  main_v2.go
docs/: ANALYTICS.md  BEGINNER-GUIDE.md  COMPLIANCE-PROOF.md  PLUGIN-GUIDE.md  PRIVACY_ANALYTICS.md  SECURITY-AUDIT.md  TRANSPARENCY.md  WORDPRESS_MIGRATION.md
nginx/: security-headers.conf
plugins/: sandbox.go
rust/: Cargo.toml  README.md
rust/src/: main.rs  security.rs
scripts/: analytics-aggregator.sh  auto-format.sh  blocking-markdown-sanitizer.sh  blocking-media-pipeline.sh  build-deterministic.sh  build-release-safe.sh  build-sandbox-hardened.sh  cache-discipline.sh  cloudflare-disable-js-features.sh  cloudflare-harden.sh  cloudflare-waf-hardening.sh  comprehensive-media-sanitizer.sh  (+54 more)
(+77 files in other folders)
